# fastapi-qpay

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
fastapi_qpay/: __init__.py  config.py  dependencies.py  router.py  webhook.py
tests/: test_config.py  test_router.py
